# ferricorn

./: .gitignore  Cargo.toml  README.md  build.rs  hello.py
.github/workflows/: rust.yml
asgi/: Cargo.toml  build.rs
asgi/src/: main.rs  py_process.rs
messages/: Cargo.toml
messages/src/: types.rs
py/: echo_server.py  pyproject.toml  requeriments.txt
src/: main.rs  types.rs
worker/: Cargo.toml  build.rs
worker/src/: args.rs  main.rs  py_process.rs
