[workspace]
members = ["asgi", "messages", "worker"]
resolver = "2"

[workspace.build-dependencies]
pyo3-build-config = { version = "0.23.4", features = [
    "abi3",
    "extension-module",
] }

[workspace.dependencies]
pyo3 = { version = "0.23.4", features = [
    "abi3",
    "extension-module",
    "auto-initialize",
] }
tokio = { version = "1.43.0", features = ["full"] }
bincode = { version = "1.3.3" }
serde = { version = "1.0.217", features = ["derive"] }
hyper = { version = "1.6.0", features = ["http1"] }
