[package]
name = "worker"
version = "0.0.2"
edition = "2021"

[dependencies]
bincode = { workspace = true }
clap = { version = "4.5.30", features = ["derive", "env"] }
hyper = { workspace = true, features = ["http1"] }
pyo3 = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
messages = { path = "../messages/" }
crossbeam-channel = "0.5.14"

[build-dependencies]
pyo3-build-config = { version = "0.23.4", features = [
    "abi3",
    "extension-module",
] }

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-undefined", "-C", "link-arg=dynamic_lookup"]
